--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Asteroides">
+        <activity android:name=".PreferenciasActivity"
+            android:exported="true"
+            />
         <activity
             android:name=".AcercaDeActivity"
             android:parentActivityName=".MainActivity"
