--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Asteroides">
-        <activity android:name=".PreferenciasActivity"
-            android:exported="true"
-            />
+        <activity
+            android:name=".Puntuaciones"
+            android:exported="true" />
+        <activity
+            android:name=".PreferenciasActivity"
+            android:exported="true" />
         <activity
             android:name=".AcercaDeActivity"
+            android:exported="true"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"
-            android:exported="true" />
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
